# geopayment

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml
docs/: bog.md  bog_installment.md  credo_installment.md  tbc.md  tbc_installment.md
geopayment/: __init__.py  constants.py  tests.py  utils.py
geopayment/crypto/: __init__.py
geopayment/providers/: __init__.py  utils.py
geopayment/providers/bog/: __init__.py  provider.py
geopayment/providers/bog/installment/: __init__.py  form.py
geopayment/providers/credo/: __init__.py  provider.py
geopayment/providers/credo/installment/: __init__.py  form.py
geopayment/providers/tbc/: __init__.py  provider.py
geopayment/providers/tbc/installment/: __init__.py
payment/: apps.py  config.py  models.py  urls.py  utils.py  views.py
payment/crypto/: crypto.py
payment/tbc/: operations.py
payment/templates/payment/: thank_you.html
payments/: utils.py
payments/crypto/: crypto.py
payments/tbc/: merchant.py  operations.py
providers/: constants.py  utils.py
providers/tbc/: provider.py
providers/tbc/certs/: test.pem
