[metadata]
name = geopayment
version = attr: geopayment.__version__
url = https://github.com/Lh4cKg/geopayment
author = Lasha Gogua
author_email = gogualasha@gmail.com
description = Python SDK for Georgian Payment Providers
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.7
project_urls =
    Documentation = https://github.com/Lh4cKg/geopayment/tree/main/docs
    Release notes = https://github.com/Lh4cKg/geopayment/releases
    Source = https://github.com/Lh4cKg/geopayment

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    cryptography >= 3.3.2
    pyOpenSSL>= 21.0.0
    requests >= 2.26.0

[flake8]
exclude = example,docs,certs
max-line-length = 79

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = geopayment